--- a/Lab13/partials/_header.html
+++ b/Lab13/partials/_header.html
@@ -11,7 +11,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
       <meta charset=UTF-8>
         
-        <title> Lab 11: Manejo de formas con php y modelo de capas</title>
+        <title>Lab 13: Manejo de sesiones con php</title>
     </head>
 
     <body background="color.jpg">
@@ -20,7 +20,7 @@
         <header>
             <br>
             <br>
-            <h4 style="color:darkcyan">Lab 11: Manejo de formas con php y modelo de capas </h4>
+            <h4 style="color:darkcyan">Lab 13: Manejo de sesiones con php</h4>
             <br>
             <br>
 	    </header>
